add columns and rows.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
         <p>Hawaii, you had me at Aloha!</p>
       </div>
 
-      <div class="panel panel-default">
-        <img src="hawaii.jpg" alt="hawaii" />
-      </div>
 
       <div class="panel panel-danger">
         <div class="panel-heading">
@@ -38,6 +35,52 @@
         </ul>
       </div>
       </div>
+
+        <div class="row">
+            <div class="col-md-4">
+              <div class="panel panel-warning">
+                <div class="panel-heading bg-success">
+                  <h2 class="panel-title">Things to Do</h2>
+                </div>
+              <div class="panel-body">
+                <ul>
+                  <li>Thing</li>
+                  <li>Thing</li>
+                  <li>Thing</li>
+                </ul>
+              </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-warning">
+                <div class="panel-heading">
+                  <h2 class="panel-title">Things to Do</h2>
+                </div>
+                <div class="panel-body">
+                  <ul>
+                    <li>Thing</li>
+                    <li>Thing</li>
+                    <li>Thing</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-warning">
+                <div class="panel-heading">
+                  <h2 class="panel-title">Things to Do</h2>
+                </div>
+                <div class="panel-body">
+                  <ul>
+                    <li>Thing</li>
+                    <li>Thing</li>
+                    <li>Thing</li>
+                  </ul>
+                </div>
+            </div>
+        </div>
+      </div>
+
 
       <blockquote class="bg-info">
         <p>Man, Hawaii sure is great!</p>
