add header background image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Vacation</title>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
     <div class="container">
